fix: keep-alive syntax and maven build stability