@@ -3,6 +3,7 @@ package com.bibimartins.service;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 @Service
@@ -12,16 +13,13 @@ public class KeepAliveService {
     @Scheduled(fixedRate = 600000)
     public void keepAlive() {
         try {
-            // We'll try to ping the health endpoint or root
-            // Render provides the PORT, but we need the public URL.
-            // If the URL is not set, we just skip to avoid errors.
             String appUrl = System.getenv("APP_URL");
             if (appUrl == null || appUrl.isEmpty()) {
                 System.out.println("KeepAlive: APP_URL not set. Skipping ping.");
                 return;
             }
 
-            URL url = new URL(appUrl);
+            URL url = URI.create(appUrl).toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setConnectTimeout(5000);
